# serena

./: .env.example  .gitignore  .mcp.json  .tool-versions  AGENTS.md  AI_PANEL_COMPLETE_SUMMARY.md  AI_PANEL_LSP_MANAGER_CRITIQUE.md  AI_PANEL_MCP_PATCH_CRITIQUE.md  AI_PANEL_PROJECT_CRITIQUE.md  AI_PANEL_SERENA_AGENT_CRITIQUE.md  AI_PANEL_TDD_SESSION_SUMMARY.md  AI_PANEL_TOOLBASE_CRITIQUE.md  AUTORIA VALERIA SAA  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup_20260125_145114  CLAUDE_CODE_SETUP.md  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  DOCKER.md  Dockerfile  Dockerfile.maximal  GLOBAL_CLAUDE_MD_UPDATES.md  HASKELL_CODE_REVIEW.md  IMPLEMENTATION-PLAN-hybrid-mcp-patch.md  IMPLEMENTATION_SUMMARY.md  KOTLIN_ISSUES.md  LEAN4.md  LEAN4_PR_TODO.md  MARKDOWN_OPTIMIZATION_IMPLEMENTATION.md  MULTI_LSP_IMPLEMENTATION.md  Makefile  PASCAL_DELPHI_IMPLEMENTATION.md  PATCH-NOTES.md  POLYGLOT_PR_DESCRIPTION.md  PR_DESCRIPTION.md  README-dev.md  README.md  RUN_UP.md  SERENA_CLAUDE_CODE_SETUP_ANALYSIS.md  (+30 more)
.codex-plugin/: plugin.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
test/resources/repos/haskell/test_repo/: .gitignore  README.md  hie.yaml  hls-demo.cabal  stack.yaml
test/resources/repos/haskell/test_repo/app/: Main.hs
test/resources/repos/haskell/test_repo/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
test/resources/repos/haskell/test_repo/dist-newstyle/packagedb/ghc-9.12.2/: hls-demo-0.1.0.0-inplace.conf  package.cache
test/resources/repos/haskell/test_repo/src/: Lib.hs
(+1165 files in other folders)
